k8s/prod/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: newsugar-backend-prod
  namespace: default
  labels:
    app: newsugar-backend
    env: prod
spec:
  replicas: 2
  selector:
    matchLabels:
      app: newsugar-backend
      env: prod
  template:
    metadata:
      labels:
        app: newsugar-backend
        env: prod
    spec:
      containers:
        - name: newsugar-backend
          image: 061039804626.dkr.ecr.ap-northeast-2.amazonaws.com/newsugar-backend:prod
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
          resources:
            requests:
              cpu: "100m"
              memory: "256Mi"
            limits:
              cpu: "500m"
              memory: "512Mi"
